# A4-paper-sheet-detection-and-cropping

./: CMakeLists.txt  Hough.cpp  Warping.h  main.cpp
