CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJECT a4detect)

PROJECT(${PROJECT})

INCLUDE_DIRECTORIES(.)

SET(SRCS Hough.cpp Warping.cpp main.cpp)

ADD_EXECUTABLE(${PROJECT} ${SRCS})

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})

SET_PROPERTY(TARGET ${PROJECT} PROPERTY CXX_STANDARD 20)

TARGET_LINK_LIBRARIES(${PROJECT} ${EIGEN3_LIBRARIES} X11)
